--- a/front/package.json
+++ b/front/package.json
@@ -52,6 +52,7 @@
     "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.462.0",
+    "mathjs": "^14.4.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-axios": "^2.0.6",
