--- a/front/package.json
+++ b/front/package.json
@@ -54,6 +54,7 @@
     "lucide-react": "^0.462.0",
     "mathjs": "^14.4.0",
     "next-themes": "^0.3.0",
+    "openai": "^4.97.0",
     "react": "^18.3.1",
     "react-axios": "^2.0.6",
     "react-day-picker": "^8.10.1",
