--- a/RoiBackend/composer.json
+++ b/RoiBackend/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.0",
+        "mossadal/math-parser": "^1.3",
         "openai-php/client": "^0.12.0",
         "tymon/jwt-auth": "^2.2"
     },
