--- a/front/package.json
+++ b/front/package.json
@@ -69,6 +69,7 @@
     "tailwindcss-animate": "^1.0.7",
     "universal-cookie": "^7.2.2",
     "vaul": "^0.9.3",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
