--- a/RoiBackend/composer.json
+++ b/RoiBackend/composer.json
@@ -12,8 +12,10 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.0",
+        "maatwebsite/excel": "^3.1",
         "mossadal/math-parser": "^1.3",
         "openai-php/client": "^0.12.0",
+        "phpoffice/phpspreadsheet": "^1.29",
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
