--- a/RoiBackend/composer.json
+++ b/RoiBackend/composer.json
@@ -16,6 +16,7 @@
         "mossadal/math-parser": "^1.3",
         "openai-php/client": "^0.12.0",
         "phpoffice/phpspreadsheet": "^1.29",
+        "tecnickcom/tcpdf": "^6.10",
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
